--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,4 @@ block content
   h1= title
   p Welcome to #{title}
 
-  h1 github -> heroku -> travis - 
+  h1 auto deplay işlemleri : github -> travis -> heroku
